# cpack-example

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
include/foobar/: foobar.hpp
src/: foobar.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
